# Project

./: .clinerules  AGENT.md  README.md  main.py  pyproject.toml
outputs/problem1/: report.md
outputs/problem2/: report.md
problem1/: data.py  diagnostics.py  model.py  report.bk.md  report.py  visualization.py  weights.npy  说明.md
problem2/: P2实现思路与说明指导.md  说明.md
src/: data_loader.py  diagnostics.py  linear_model.py  metrics.py  report.py  visualization.py
src/problems/: problem1.py  problem2.py
